<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">上海汇众安全预警</string>
    <string name="action_settings">设置</string>
    <string name="push_down_refresh">下拉刷新</string>
    <string name="view_more">查看更多</string>
    <string name="hint_loading">正在加载...</string>
    <string name="last_update_time_dot">上次更新时间：</string>
    <string name="click_loading">点击加载更多</string>
    <string name="network_error">网络连接错误</string>
    <string name="release_refresh_data">松开刷新数据</string>
    <string name="release_loading_more">松开载入更多</string>
    <string name="title_activity_start">启动界面</string>
    <string name="title_activity_base">主Activity</string>
    <string name="home">首页</string>
    <string name="login">登录</string>
    <string name="code_hint">看不清？\n换一张</string>
    <string name="please_input_username">用户名</string>
    <string name="please_input_password">密码</string>
    <string name="please_input_code">验证码</string>
    <string name="my">我的</string>
    <string name="active">1000班组</string>
    <string name="check">检查</string>
    <string name="notice">记录</string>
    <string name="setting">设置</string>
    <string name="input_key_hint">输入设备或仪器仪表关键词</string>
    <string name="search">搜索</string>
    <string name="equipment">设备</string>
    <string name="meter">仪表仪器</string>
    <string name="search_banzu">选择班组</string>
    <string name="patrol">检查异常</string>
    <string name="xuncha_normal">检查正常</string>
    <string name="spotcheck">检查异常</string>
    <string name="choucha_normal">检查正常</string>
    <string name="rectification">待整改审项</string>
    <string name="abarbeitung">审核整改</string>
    <string name="rectification_timeout">整改超时</string>
    <string name="already_rectification">已整改</string>
    <string name="meter_category">设备分类</string>
    <string name="patrol_record">巡查记录</string>
    <string name="spotcheck_record">抽查记录</string>
    <string name="rectification_record">整改记录</string>
    <string name="warning_record">预警记录</string>
    <string name="activity_record">活动记录</string>
    <string name="title_activity_meter_detail">巡查详情</string>
    <string name="title_activity_patrol_detail">巡查异常</string>
    <string name="title_activity_spotcheck_detail">抽查异常</string>
    <string name="yc_summary">异常描述</string>
    <string name="yc_type">异常类型</string>
    <string name="please_input_yichang_summary">请输入异常描述</string>
    <string name="yichang_camera">异常拍照</string>
    <string name="title_activity_unusual">异常详情</string>
    <string name="title_activity_my_data">我的资料</string>
    <string name="basic_info">基本信息</string>
    <string name="account">账号：</string>
    <string name="department">部门：</string>
    <string name="jobs">岗位：</string>
    <string name="name">姓名：</string>
    <string name="icon">头像：</string>
    <string name="changethepassword">修改密码</string>
    <string name="please_input_old_password">请输入旧密码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="please_input_renew_password">请再次输入新密码</string>
    <string name="autosyn">自动同步</string>
    <string name="manualsync">手动同步</string>
    <string name="update">更新</string>
    <string name="about">关于</string>
    <string name="title_activity_patrol_record">PatrolRecordActivity</string>
    <string name="mydata">我的资料</string>
    <string name="year_active">年度活动</string>
    <string name="quarter_active">季度活动</string>
    <string name="month_active">月度活动</string>

    <string-array name="check">
        <item>拍照</item>
    </string-array>

    <string name="title_activity_check_over">巡查提交结果</string>
    <string name="result_ok">提交成功</string>
    <string name="forget">忘记密码？</string>
    <string name="yearAndMonth">年/月</string>
    <string name="xuncha">巡查</string>
    <string name="choucha">抽查</string>
    <string name="daichoucha">待抽查</string>
    <string name="accident">事故</string>
    <string name="title_activity_changepassword">ChangepasswordActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="back">返回</string>
    <string name="other_unusual">其他异常</string>
    <string name="news">资料列表</string>
    <string name="news_detail">文章详情</string>
    <string name="news_title">公司安全生产管理制度</string>
    <string name="news_content">安全生产是公司生产发展的一项重要方针，实行 “防火、防盗、</string>
    <string name="paicha">隐患排查</string>
    <string name="otherunusual">其他异常</string>
    <string name="yiqi">仪器检测</string>
    <string name="download">下载</string>
    <string name="gongduan">工段</string>
    <string name="banzu">班组</string>
    <string name="chejian">车间</string>
    <string name="commit">提交</string>
    <string name="daijiancha">待检查</string>
    <string name="check_name">特种设备起重机</string>
    <string name="normal">正常</string>
    <string name="abnormal">异常</string>
    <string name="active_detail">活动详情</string>
    <string name="save">保存</string>
    <string name="finish">完成</string>
    <string name="un_finish">未完成</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesay">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="chooseTime">选择时间：</string>
    <string name="currentDate">本月月份：</string>
    <string name="accident_type">事故类型：</string>
    <string name="accident_summray">事故描述：</string>
    <string name="current_department">当前部门：</string>
    <string name="start">开始</string>
    <string name="end">结束</string>
    <string name="find_password">找回密码</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="input_yzm">请输入验证码</string>
    <string name="set_new_psd">设置新密码</string>
    <string name="sure">确定</string>
    <string name="get_code">获取验证码</string>
    <string name="lianxu">连续</string>
    <string name="no_accident">天无安全事故</string>
    <string name="phone">电话：</string>
    <string name="login_out">退出登录</string>
    <string name="task_distribution">任务派发</string>
    <string name="hint">提示</string>
    <string name="sure_login_out">是否退出登录？</string>
    <string name="cancell">取消</string>
    <string name="invailale_address">下载地址无效</string>

    <string name="check_update">提示</string>
    <string name="update_immediately">确定</string>
    <string name="update_later">取消</string>
    <string name="cancel_update">取消</string>
    <string name="app_updating">正在下载文章</string>
    <string name="app_downloading">正在下载应用</string>
</resources>