<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="@drawable/biaotibeijing" >

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:background="@drawable/button_back"
            android:text="@string/back"
            android:textColor="@color/color_back"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/find_password"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginTop="50dp"
        android:background="@null"
        android:hint="@string/input_phone_number"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="62dp"
        android:layout_marginRight="62dp"
        android:background="@color/change_psd_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="104dp" >

        <EditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="68dp"
            android:layout_marginRight="68dp"
            android:background="@null"
            android:hint="@string/input_yzm"
            android:textSize="18sp" />

        <Button
            android:id="@+id/get_code"
            android:layout_width="98dp"
            android:layout_height="34dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="22dp"
            android:layout_marginRight="62dp"
            android:background="@color/code_btn"
            android:gravity="center"
            android:text="@string/get_code"
            android:textColor="@color/xuncha_name" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="62dp"
        android:layout_marginRight="62dp"
        android:background="@color/change_psd_line" />

    <EditText
        android:id="@+id/new_psd"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:hint="@string/set_new_psd"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="62dp"
        android:layout_marginRight="62dp"
        android:background="@color/change_psd_line" />

    <Button
        android:id="@+id/btn_sure"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="66dp"
        android:layout_marginRight="66dp"
        android:layout_marginTop="54dp"
        android:background="@drawable/btn_refresh_psd_sure"
        android:text="@string/sure"
        android:textColor="@color/white"
        android:textSize="24sp" />

</LinearLayout>