<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/biaotibeijing"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="96dp">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:background="@drawable/button_back"
                android:text="@string/back"
                android:textColor="@color/color_back"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/choucha"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <Button
                android:id="@+id/otherbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:background="@drawable/btn_other_unusual"

                android:text="@string/other_unusual"
                android:textColor="@color/color_back"
                android:textSize="24sp"

                />
        </RelativeLayout>

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText

                android:id="@+id/edt_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/sousuokuang"
                android:hint="@string/input_key_hint"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:lines="1"
                android:paddingLeft="5dp"
                android:textColor="@color/summary"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_search" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="@drawable/biaotilan">

        <LinearLayout
            android:id="@+id/chooseLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/group_choose"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="28dp"
                android:drawablePadding="28dp"
                android:drawableRight="@drawable/xuanze_1"
                android:gravity="center_vertical"
                android:text="@string/search_banzu"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/rg_choucha"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/yinhuan"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/yiqi"
                    android:textColor="@color/rg_choucha"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/paicha"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/paicha"
                    android:textColor="@color/rg_choucha"
                    android:textSize="24sp" />
            </RadioGroup>
        </LinearLayout>
    </RelativeLayout>

    <ListView
        android:id="@+id/list_chouCha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:listSelector="@android:color/transparent"></ListView>

</LinearLayout>